# qdl_zno_analysis

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: pages.yml
docs/source/: conf.py  index.rst  user_guide.md
docs/source/user_guide/: data.md  filenames.md
qdl_zno_analysis/: __init__.py  _extra_dependencies.py  _pint.py  constants.py  errors.py  physics.py  typevars.py  utils.py
qdl_zno_analysis/data_classes/: data_classes.py  metadata_classes.py  quantity_dataframes.py
qdl_zno_analysis/data_utils/: data.py  metadata.py  quantity_dataframes.py
qdl_zno_analysis/examples/: __init__.py  example_data_utils.py
qdl_zno_analysis/examples/spectra/: plot_sif_kinetic_series.py  plot_sif_spectrum.py  plot_spe_spectrum.py
qdl_zno_analysis/external_data/: __init__.py  refractive_index_air.csv
qdl_zno_analysis/filename_utils/: filename_info.py  filename_manager.py  filename_parsing.py
