# More info on https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "qdl_zno_analysis"
version = "0.2.1"
authors = [
    {name = "Vasilis Niaouris", email = "vasilisniaouris@gmail.com"},
]
description = "A Python package for analyzing spectral and temporal data."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["data", "analysis", "spectroscopy", "time-dependent", "g2", "lifetime"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Framework :: Jupyter",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "numpy>=1.24.2",
    "pandas",
    "pint>=0.20.1",
    "pint-pandas",
    "scipy",
]
# dynamic = ["version"]

[project.optional-dependencies]
visualization = [
    "matplotlib>=3.7.1",
]
spectroscopy = [
    "sif_parser",
    "spe2py",
    "xmltodict",
]
example_data = [
    "requests",
    "gdown",
]

#examples = ["notebook"]

[project.urls]
#homepage = "https://example.com"
documentation = "https://vasilisniaouris.github.io/qdl_zno_analysis/"
repository = "https://github.com/vasilisniaouris/qdl_zno_analysis/"
changelog = "https://github.com/vasilisniaouris/qdl_zno_analysis/blob/master/CHANGELOG.md"

# [project.optional-dependencies]
# pdf = ["ReportLab>=1.2", "RXP"]
# rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

# [project.scripts]
# my-script = "my_package.module:function"

[tool.setuptools] # Setuptools specific
platforms = ["Any"]
include-package-data = true
# More on datafiles: https://setuptools.pypa.io/en/latest/userguide/datafiles.html

[tool.setuptools.package-data]
"*" = ["*.ipynb", "*.csv"]

[docs]  # I implemented this so I can use them in the conf.py file that makes the docs with sphinx
fancy-name = "QDL ZnO Data Analysis Toolkit"
copyright = "2023, Vasilis Niaouris"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/