[metadata]
name = qdl_zno_analysis
version = 0.3.1
author = Vasilis Niaouris
author_email = vasilisniaouris@gmail.com
description = A Python package for analyzing spectral and temporal data.
long_description = file: README.md, CHANGELOG.md, LICENSE
url = https://github.com/vasilisniaouris/qdl_zno_analysis
keywords = data, analysis, spectroscopy, time-dependent, g2, lifetime
license = GNU GPL v3 license
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Framework :: Jupyter
    Topic :: Utilities
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules


[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.24.2
    pandas
    pint>=0.21
    pint_xarray
    scipy
    xarray


[options.extras_require]
all =
    qdl_zno_analysis[visualization]
    qdl_zno_analysis[spectroscopy]
    qdl_zno_analysis[example_data]
visualization =
    matplotlib>=3.7.1
spectroscopy =
    sif_parser
    spe_loader
    xmltodict
example_data =
    gdown
    jupyter
    requests

;examples =
;    notebook

[options.package_data]
* =
    *.ipynb
    *.csv

;package_dir=
;    qdl_klayout_extension = qdl_klayout_extension

;[options.package_data]
;qdl_klayout_extension = examples/*.ipynb